--- a/module_2/index.html
+++ b/module_2/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<link rel="icon" type="image/png" href="assets/icon.png" />
 	<title>Clone Instagram</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://use.fontawesome.com/4b2f158e58.js"></script>
