fixing stace at the stories container between image and username for firefox

--- a/module_2/index.html
+++ b/module_2/index.html
@@ -61,7 +61,7 @@
 				</div>
 				<div class="stories__container__item">
 					<a href="#">
-						<span>
+						<span class="stories__container__item__user-image">
 							<img src="./assets/profile/carol/carol-profile.jpg" alt="Perfil Carol">
 						</span>
 						<p class="stories__container__item__user-name">marvel_cap</p>
@@ -69,7 +69,7 @@
 				</div>
 				<div class="stories__container__item">
 					<a href="#">
-						<span>
+						<span class="stories__container__item__user-image">
 							<img src="./assets/profile/domino/domino-profile.jpg" alt="Perfil Domino">
 						</span>
 						<p class="stories__container__item__user-name">lucky_woman</p>
@@ -77,7 +77,7 @@
 				</div>
 				<div class="stories__container__item">
 					<a href="#">
-						<span>
+						<span class="stories__container__item__user-image">
 							<img src="./assets/profile/gamora/gamora-profile.jpg" alt="Perfil Gamora">
 						</span>
 						<p class="stories__container__item__user-name">she_hulk</p>
@@ -85,7 +85,7 @@
 				</div>
 				<div class="stories__container__item">
 					<a href="#">
-						<span>
+						<span class="stories__container__item__user-image">
 							<img src="./assets/profile/yoda/yoda-profile.jpg" alt="Perfil Yoda">
 						</span>
 						<p class="stories__container__item__user-name">one_wise</p>
@@ -93,7 +93,7 @@
 				</div>
 				<div class="stories__container__item">
 					<a href="#">
-						<span>
+						<span class="stories__container__item__user-image">
 							<img src="./assets/profile/saitama/soquin.jpg" alt="Perfil Yoda">
 						</span>
 						<p class="stories__container__item__user-name">soquin</p>
