fixing footer, fixing card-header-hover

--- a/module_1/index.html
+++ b/module_1/index.html
@@ -313,12 +313,14 @@
 		</div>
 	</main>
 
-	<footer class="footer container">
-		<a href="#"><img src="assets/logo-imdb.jpg" alt="IMDB logo in black and a yellow background"></a>
-		<div class=social-icons>
-			<a href="#"><i class="fa fa-twitter"></i></a>
-			<a href="#"><i class="fa fa-facebook-square"></i></a>
-			<a href="#"><i class="fa fa-instagram"></i></a>
+	<footer>
+		<div class="footer container">
+			<a href="#"><img src="assets/logo-imdb.jpg" alt="IMDB logo in black and a yellow background"></a>
+			<div class=social-icons>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-facebook-square"></i></a>
+				<a href="#"><i class="fa fa-instagram"></i></a>
+			</div>
 		</div>
 	</footer>
 </body>
