--- a/module_2/index.html
+++ b/module_2/index.html
@@ -121,7 +121,7 @@
 				</figure>
 				<div class="feed__post__container">
 					<div class="feed__post__actions">
-						<div class="feed__post__actions--left">
+						<div>
 							<a href="#"><i data-feather="heart"></i></a>
 							<a href="#"><i data-feather="message-circle"></i></a>
 							<a href="#"><i data-feather="send"></i></a>
@@ -164,11 +164,11 @@
 							</div>
 						</div>
 					</div>
-					<footer class="feed__post__status__footer">
+					<footer class="feed__post__footer">
 						<p>Há 2 horas</p>
 					</footer>
 				</div>
-				<div class="feed__post__status__write-comment">
+				<div class="feed__post__write-comment">
 					<input type="text" placeholder="Adicione um comentário..." required>
 					<button>Publicar</button>
 				</div>
@@ -233,11 +233,11 @@
 							</div>
 						</div>
 					</div>
-					<footer class="feed__post__status__footer">
+					<footer class="feed__post__footer">
 						<p>Há 2 horas</p>
 					</footer>
 				</div>
-				<div class="feed__post__status__write-comment">
+				<div class="feed__post__write-comment">
 					<input type="text" placeholder="Adicione um comentário..." required>
 					<button>Publicar</button>
 				</div>
@@ -259,7 +259,7 @@
 				</figure>
 				<div class="feed__post__container">
 					<div class="feed__post__actions">
-						<div class="feed__post__actions--left">
+						<div>
 							<a href="#"><i data-feather="heart"></i></a>
 							<a href="#"><i data-feather="message-circle"></i></a>
 							<a href="#"><i data-feather="send"></i></a>
@@ -302,11 +302,11 @@
 							</div>
 						</div>
 					</div>
-					<footer class="feed__post__status__footer">
+					<footer class="feed__post__footer">
 						<p>Há 2 horas</p>
 					</footer>
 				</div>
-				<div class="feed__post__status__write-comment">
+				<div class="feed__post__write-comment">
 					<input type="text" placeholder="Adicione um comentário..." required>
 					<button>Publicar</button>
 				</div>
@@ -328,7 +328,7 @@
 				</figure>
 				<div class="feed__post__container">
 					<div class="feed__post__actions">
-						<div class="feed__post__actions--left">
+						<div>
 							<a href="#"><i data-feather="heart"></i></a>
 							<a href="#"><i data-feather="message-circle"></i></a>
 							<a href="#"><i data-feather="send"></i></a>
@@ -371,11 +371,11 @@
 							</div>
 						</div>
 					</div>
-					<footer class="feed__post__status__footer">
+					<footer class="feed__post__footer">
 						<p>Há 2 horas</p>
 					</footer>
 				</div>
-				<div class="feed__post__status__write-comment">
+				<div class="feed__post__write-comment">
 					<input type="text" placeholder="Adicione um comentário..." required>
 					<button>Publicar</button>
 				</div>
@@ -397,7 +397,7 @@
 				</figure>
 				<div class="feed__post__container">
 					<div class="feed__post__actions">
-						<div class="feed__post__actions--left">
+						<div>
 							<a href="#"><i data-feather="heart"></i></a>
 							<a href="#"><i data-feather="message-circle"></i></a>
 							<a href="#"><i data-feather="send"></i></a>
@@ -440,11 +440,11 @@
 							</div>
 						</div>
 					</div>
-					<footer class="feed__post__status__footer">
+					<footer class="feed__post__footer">
 						<p>Há 2 horas</p>
 					</footer>
 				</div>
-				<div class="feed__post__status__write-comment">
+				<div class="feed__post__write-comment">
 					<input type="text" placeholder="Adicione um comentário..." required>
 					<button>Publicar</button>
 				</div>
@@ -466,7 +466,7 @@
 				</figure>
 				<div class="feed__post__container">
 					<div class="feed__post__actions">
-						<div class="feed__post__actions--left">
+						<div>
 							<a href="#"><i data-feather="heart"></i></a>
 							<a href="#"><i data-feather="message-circle"></i></a>
 							<a href="#"><i data-feather="send"></i></a>
@@ -509,11 +509,11 @@
 							</div>
 						</div>
 					</div>
-					<footer class="feed__post__status__footer">
+					<footer class="feed__post__footer">
 						<p>Há 2 horas</p>
 					</footer>
 				</div>
-				<div class="feed__post__status__write-comment">
+				<div class="feed__post__write-comment">
 					<input type="text" placeholder="Adicione um comentário..." required>
 					<button>Publicar</button>
 				</div>
